# BankModeling

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Analyzer.h  Bank.h  Banker.h  ClientsQueue.h  Primitives.h  Statistics.h  Time.h  TimeProcessing.h
source/: Analyzer.cpp  Bank.cpp  Banker.cpp  ClientsQueue.cpp  Primitives.cpp  Time.cpp  TimeProcessing.cpp
technical_specification/: README.md
tests/: CMakeLists.txt  TimeTest.cpp  WeekDay.cpp
